[gd_scene load_steps=8 format=3 uid="uid://bq6o8ib5r5gut"]

[ext_resource type="TileSet" uid="uid://cn0st44pymvw8" path="res://tilemap/base_tileset.tres" id="1_ihgnr"]
[ext_resource type="Script" uid="uid://bold65aytcgcx" path="res://proc_gen/proc_gen_world.gd" id="1_rwrl7"]

[sub_resource type="Gradient" id="Gradient_rwrl7"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.221239, 0.774336)
colors = PackedColorArray(0.178605, 0.410125, 1, 1, 0.776841, 0.897406, 0.983949, 1, 0.966054, 0.940752, 0.734162, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_555r7"]
frequency = 0.008

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4y3xb"]
color_ramp = SubResource("Gradient_rwrl7")
noise = SubResource("FastNoiseLite_555r7")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4y3xb"]
frequency = 0.35
fractal_octaves = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cqu7q"]
noise = SubResource("FastNoiseLite_4y3xb")

[node name="ProcGenWorld" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_rwrl7")
noise_height_text = SubResource("NoiseTexture2D_4y3xb")
noise_tree_text = SubResource("NoiseTexture2D_cqu7q")

[node name="TilemapHo" type="Node2D" parent="."]
y_sort_enabled = true

[node name="water" type="TileMapLayer" parent="TilemapHo"]
z_index = -5
tile_set = ExtResource("1_ihgnr")

[node name="snow_water" type="TileMapLayer" parent="TilemapHo"]
z_index = -4
tile_set = ExtResource("1_ihgnr")

[node name="snow_patch" type="TileMapLayer" parent="TilemapHo"]
z_index = -3
tile_set = ExtResource("1_ihgnr")

[node name="patch_decor" type="TileMapLayer" parent="TilemapHo"]
z_index = -3
tile_set = ExtResource("1_ihgnr")

[node name="cliffs" type="TileMapLayer" parent="TilemapHo"]
z_index = 2
y_sort_enabled = true
tile_set = ExtResource("1_ihgnr")

[node name="environment" type="TileMapLayer" parent="TilemapHo"]
z_index = 2
y_sort_enabled = true
tile_set = ExtResource("1_ihgnr")
